WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288978
Crash under XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors()
https://bugs.webkit.org/show_bug.cgi?id=288978
Summary
Crash under XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors()
Chris Dumez
Reported
2025-03-03 10:55:49 PST
Crash under XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors(): ``` 50 WTFCrashWithInfo(int, char const*, char const*, int) (WebKit) 50 void WTF::memcpySpan<unsigned char, 18446744073709551615ul, unsigned char const, 18446744073709551615ul>(std::__1::span<unsigned char, 18446744073709551615ul>, std::__1::span<unsigned char const, 18446744073709551615ul>) (WebKit) ==> 50 WebKit::XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors(WTF::BitSet<96ul, unsigned int>&) (WebKit) <== 48 void WebKit::XPCServiceInitializer<WebKit::WebProcess, WebKit::XPCServiceInitializerDelegate, true>(WTF::OSObjectPtr<NSObject<OS_xpc_object>*>, NSObject<OS_xpc_object>*) (WebKit) | 48 WebContentServiceInitializer (WebKit) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-03-03 10:55:57 PST
<
rdar://145819547
>
Chris Dumez
Comment 2
2025-03-03 10:59:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41784
EWS
Comment 3
2025-03-03 12:59:49 PST
Committed
291518@main
(4a12bedaaea1): <
https://commits.webkit.org/291518@main
> Reviewed commits have been landed. Closing PR #41784 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug