Crash under XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors() https://bugs.webkit.org/show_bug.cgi?id=288978 rdar://145819547

Reviewed by Per Arne Vollan.

Validate the size of the SDKAlignedBehaviors bytes received over IPC before using them,
since they are coming from XPC.

* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.mm:
(WebKit::XPCServiceInitializerDelegate::getClientSDKAlignedBehaviors):
* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::finishLaunchingProcess):

Canonical link: https://commits.webkit.org/291518@main